Rotation values are displayed wonky after 99.9 degrees #106484

Closed
opened 2023-04-03 10:53:01 +02:00 by Dantti · 4 comments

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: (newest version of Blender that worked as expected)

Short description of error
I'm not 100% sure if this is a bug, but it is an unexpected behavior:

If you have an object and you rotate it in any axis.
It shows decimals up to 99.9 degrees.
After that viewport shows only full numbers.
You can type a number like 100.6 degrees but it rounds it up to 101 degrees.
The rotation box shows the true number if you click on it.
But it is very confusing to the user to see 101 degrees at the viewport when rotation should be 100.6

Exact steps for others to reproduce the error
see image

**Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: (newest version of Blender that worked as expected) **Short description of error** I'm not 100% sure if this is a bug, but it is an unexpected behavior: If you have an object and you rotate it in any axis. It shows decimals up to 99.9 degrees. After that viewport shows only full numbers. You can type a number like 100.6 degrees but it rounds it up to 101 degrees. The rotation box shows the true number if you click on it. But it is very confusing to the user to see 101 degrees at the viewport when rotation should be 100.6 **Exact steps for others to reproduce the error** see image
Dantti added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-03 10:53:02 +02:00

It really doesn't seem to be a bug.

It really doesn't seem to be a bug.
Iliya Katushenock added the
Interest
User Interface
label 2023-04-03 10:57:22 +02:00
Member

I've had this happening to me as well... Let me see if there's just a simple formatting function there that handles such string, maybe we should only limit numbers for the fractions not combining the integral part.

I've had this happening to me as well... Let me see if there's just a simple formatting function there that handles such string, maybe we should only limit numbers for the fractions not combining the integral part.
Member

Agreed that is is confusing. Especially since clicking the arrow buttons continues to change in 10th degrees despite showing no decimal places.

Agreed that is is confusing. Especially since clicking the arrow buttons continues to change in 10th degrees despite showing no decimal places.
Harley Acheson added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-04 01:36:41 +02:00
Harley Acheson self-assigned this 2023-04-04 01:36:49 +02:00
Member

@Harley : when confirming, always make sure we have the Module label set

@Harley : when confirming, always make sure we have the `Module` label set
Philipp Oeser added the
Module
User Interface
label 2023-04-19 09:36:02 +02:00
Iliya Katushenock removed the
Interest
User Interface
label 2023-04-19 14:11:23 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-19 00:25:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106484
No description provided.